--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity
             android:name="com.lostgrad.reader.app.DisplayWebViewActivity"
-            android:label="Lostgrad Browser"
+            android:label="Lostgrad Job Viewer"
             android:parentActivityName=".RssListView" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
