--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -27,13 +28,13 @@
         <!--Rss List View-->
         <activity
             android:name="com.lostgrad.reader.app.RssListView"
-            android:label="Lostgrad Job Results"
+            android:label="@string/app_name"
             android:parentActivityName="com.lostgrad.reader.app.SelectOptionsActivity">
         </activity>
         <!--Web View-->
         <activity
             android:name="com.lostgrad.reader.app.DisplayWebViewActivity"
-            android:label="Lostgrad Job Viewer"
+            android:label="@string/app_name"
             android:parentActivityName="com.lostgrad.reader.app.RssListView" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
